# serdis

./: .gitignore  Cargo.toml  build.rs
src/: cli.rs  main.rs
src/certs/: mod.rs
src/cli/: mod.rs  server.rs  start.rs  validator.rs
src/cnf/: mod.rs
src/db/: mod.rs  model.rs
src/db/backend/: mod.rs  surreal_impl.rs
src/net/: handler.rs  mod.rs  tls.rs
src/net/http/: handler.rs  mod.rs
src/net/multi/: mod.rs
src/net/rpc/: mod.rs  serdis_rpc.rs
src/net/rpc/proto/: api.proto
