[package]
name = "serdis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", features = [
    "macros",
    "rustls",
], default-features = false }
clap = { version = "4.4.6", features = [
    "derive",
    "std",
], default-features = false }
dashmap = { version = "5.5.3", default-features = false }
rustls = { version = "0.20.7", default-features = false }
rustls-pemfile = { version = "1.0.3", default-features = false }
serde = { version = "1.0.190", features = [
    "std",
    "derive",
], default-features = false }
serde_json = { version = "1.0.108", features = [
    "std",
], default-features = false }
